# ABench

./: .gitignore  .gitmodules  ABench.sln  CMakeLists.txt  README.md
ABench/: ABench.vcxproj  ABench.vcxproj.filters  CMakeLists.txt  Main.cpp  PCH.hpp  Prerequisites.hpp  ResourceDir.cpp  ResourceDir.hpp  Util.cpp
ABench/Common/: Common.cpp  Common.hpp  FBXFile.cpp  FBXFile.hpp  FS.hpp  Image.cpp  Image.hpp  KeyCodes.hpp  Library.cpp  Library.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp  Traits.hpp  Window.cpp  Window.hpp
ABench/Common/Linux/: Common.cpp  FS.cpp  Library.cpp  Logger.cpp  Timer.cpp  Window.cpp
ABench/Common/Win/: Common.cpp  FS.cpp  Library.cpp  Logger.cpp  Timer.cpp  Window.cpp
ABench/Math/: AABB.cpp  AABB.hpp  Common.hpp  Frustum.cpp  Frustum.hpp  Matrix.cpp  Matrix.hpp  Plane.cpp  Plane.hpp  RingAverage.hpp  RingAverageImpl.hpp  Sort.hpp  SortImpl.hpp  Vector.cpp  Vector.hpp
ABench/Math/Interpolation/: CubicInterpolator.cpp  CubicInterpolator.hpp  Interpolator.cpp  Interpolator.hpp  LinearInterpolator.cpp  LinearInterpolator.hpp
ABench/Renderer/: Backbuffer.cpp  Backbuffer.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Debugger.cpp  Debugger.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorLayoutManager.cpp  DescriptorLayoutManager.hpp  Device.cpp  Device.hpp  Extensions.cpp  Extensions.hpp  Framebuffer.cpp  Framebuffer.hpp  GridFrustumsGenerator.cpp  GridFrustumsGenerator.hpp  Instance.cpp  Instance.hpp  MultiPipeline.cpp  MultiPipeline.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  Prerequisites.hpp  QueueManager.cpp  QueueManager.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  RingBuffer.cpp  RingBuffer.hpp  SemaphoreManager.cpp  SemaphoreManager.hpp  Shader.cpp  (+13 more)
ABench/Renderer/HighLevel/: DepthPrePass.cpp  DepthPrePass.hpp  DescriptorLayoutManager.cpp  DescriptorLayoutManager.hpp  ForwardPass.cpp  ForwardPass.hpp  GridFrustumsGenerator.cpp  GridFrustumsGenerator.hpp  LightCuller.cpp  LightCuller.hpp  ParticleEngine.cpp  ParticleEngine.hpp  ParticlePass.cpp  ParticlePass.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderMacroDefinitions.hpp
ABench/Renderer/Linux/: Backbuffer.cpp  Backbuffer.hpp  LinuxBackbuffer.cpp
ABench/Renderer/LowLevel/: Backbuffer.cpp  Backbuffer.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Debugger.cpp  Debugger.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  Device.cpp  Device.hpp  Extensions.cpp  Extensions.hpp  Framebuffer.cpp  Framebuffer.hpp  Instance.cpp  Instance.hpp  MultiPipeline.cpp  MultiPipeline.hpp  Pipeline.cpp  Pipeline.hpp  QueueManager.cpp  QueueManager.hpp  RingBuffer.cpp  RingBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Tools.cpp  Tools.hpp  Translations.cpp  Types.hpp  Util.hpp  VertexLayout.cpp  VkRAII.hpp
ABench/Renderer/LowLevel/Linux/: LinuxBackbuffer.cpp
ABench/Renderer/LowLevel/Win/: WinBackbuffer.cpp  WinBackbuffer.hpp
ABench/Renderer/Win/: WinBackbuffer.cpp
ABench/Scene/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Emitter.cpp  Emitter.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
ABenchTest/: ABenchTest.vcxproj  ABenchTest.vcxproj.filters  CMakeLists.txt  Main.cpp  PCH.hpp
ABenchTest/Tests/: FBXFileTest.cpp  RingAverageTest.cpp  SortTest.cpp  Vector3Test.cpp  Vector4Test.cpp  VectorTest.cpp  WindowTest.cpp
Data/Shaders/: ForwardPass.frag  ForwardRenderer.vert  GridFrustumsGenerator.comp  LightCuller.comp  ParticleEngine.comp  shader.frag  shader.vert
Data/TestData/: test.fbx
Scripts/: blender_triangulate.py  build.sh
gtest/: CMakeLists.txt
