MESSAGE("Generating Makefile for ABench")

FILE(GLOB ABENCH_SOURCES          *.cpp)
FILE(GLOB ABENCH_HEADERS          *.hpp)
FILE(GLOB ABENCH_COMMON_SOURCES   Common/*.cpp)
FILE(GLOB ABENCH_COMMON_HEADERS   Common/*.hpp)
FILE(GLOB ABENCH_MATH_SOURCES     Math/*.cpp)
FILE(GLOB ABENCH_MATH_HEADERS     Math/*.hpp)
FILE(GLOB ABENCH_SCENE_SOURCES    Scene/*.cpp)
FILE(GLOB ABENCH_SCENE_HEADERS    Scene/*.hpp)
FILE(GLOB ABENCH_RENDERER_SOURCES Renderer/*.cpp)
FILE(GLOB ABENCH_RENDERER_HEADERS Renderer/*.hpp)
FILE(GLOB ABENCH_COMMON_LINUX_SOURCES   Common/Linux/*.cpp)
FILE(GLOB ABENCH_COMMON_LINUX_HEADERS   Common/Linux/*.hpp)
FILE(GLOB ABENCH_RENDERER_LINUX_SOURCES Renderer/Linux/*.cpp)
FILE(GLOB ABENCH_RENDERER_LINUX_HEADERS Renderer/Linux/*.hpp)

INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY} ${ABENCH_DEPS_DIRECTORY})
LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY})

# To enable XCB-specific Vulkan extensions
ADD_DEFINITIONS(-DVK_USE_PLATFORM_XCB_KHR -DVK_NO_PROTOTYPES)

ADD_EXECUTABLE(ABench
               ${ABENCH_SOURCES} ${ABENCH_HEADERS}
               ${ABENCH_COMMON_SOURCES} ${ABENCH_COMMON_HEADERS}
               ${ABENCH_MATH_SOURCES} ${ABENCH_MATH_HEADERS}
               ${ABENCH_SCENE_SOURCES} ${ABENCH_SCENE_HEADERS}
               ${ABENCH_RENDERER_SOURCES} ${ABENCH_RENDERER_HEADERS}
               ${ABENCH_COMMON_LINUX_SOURCES} ${ABENCH_COMMON_LINUX_HEADERS}
               ${ABENCH_RENDERER_LINUX_SOURCES} ${ABENCH_RENDERER_LINUX_HEADERS})

# TODO uncomment when glslang will be added
#TARGET_LINK_LIBRARIES(ABench glslang hlsl SPIRV OGLCompiler OSDependent)
TARGET_LINK_LIBRARIES(ABench dl)

ADD_CUSTOM_COMMAND(TARGET ABench POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ABench> ${ABENCH_OUTPUT_DIRECTORY}/${targetfile})
