MESSAGE(STATUS "Generating Makefile for ABench")

FILE(GLOB ABENCH_SOURCES          *.cpp)
FILE(GLOB ABENCH_HEADERS          *.hpp)
FILE(GLOB ABENCH_COMMON_SOURCES   Common/*.cpp)
FILE(GLOB ABENCH_COMMON_HEADERS   Common/*.hpp)
FILE(GLOB ABENCH_MATH_SOURCES     Math/*.cpp)
FILE(GLOB ABENCH_MATH_HEADERS     Math/*.hpp)
FILE(GLOB ABENCH_SCENE_SOURCES    Scene/*.cpp)
FILE(GLOB ABENCH_SCENE_HEADERS    Scene/*.hpp)
FILE(GLOB ABENCH_RENDERER_LOWLEVEL_SOURCES Renderer/LowLevel/*.cpp)
FILE(GLOB ABENCH_RENDERER_LOWLEVEL_HEADERS Renderer/LowLevel/*.hpp)
FILE(GLOB ABENCH_RENDERER_HIGHLEVEL_SOURCES Renderer/HighLevel/*.cpp)
FILE(GLOB ABENCH_RENDERER_HIGHLEVEL_HEADERS Renderer/HighLevel*.hpp)
FILE(GLOB ABENCH_COMMON_LINUX_SOURCES   Common/Linux/*.cpp)
FILE(GLOB ABENCH_COMMON_LINUX_HEADERS   Common/Linux/*.hpp)
FILE(GLOB ABENCH_RENDERER_LOWLEVEL_LINUX_SOURCES Renderer/LowLevel/Linux/*.cpp)
FILE(GLOB ABENCH_RENDERER_LOWLEVEL_LINUX_HEADERS Renderer/LowLevel/Linux/*.hpp)

PKG_CHECK_MODULES(ABENCH_PKG_DEPS REQUIRED
                  xcb
                  )

INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY}
                    ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY}
                    ${ABENCH_DEPS_GLSLANG_INCLUDE_DIRECTORY}
                    ${ABENCH_DEPS_VULKAN_DIRECTORY}
                    ${ABENCH_PKG_DEPS_INCLUDE_DIRS}
                    )
LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY}
                 ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY}
                 ${ABENCH_DEPS_GLSLANG_LIB_DIRECTORY}
                 )

# To enable XCB-specific Vulkan extensions
ADD_DEFINITIONS(-DVK_USE_PLATFORM_XCB_KHR -DVK_NO_PROTOTYPES)

ADD_EXECUTABLE(ABench
               ${ABENCH_SOURCES} ${ABENCH_HEADERS}
               ${ABENCH_COMMON_SOURCES} ${ABENCH_COMMON_HEADERS}
               ${ABENCH_MATH_SOURCES} ${ABENCH_MATH_HEADERS}
               ${ABENCH_SCENE_SOURCES} ${ABENCH_SCENE_HEADERS}
               ${ABENCH_RENDERER_LOWLEVEL_SOURCES} ${ABENCH_RENDERER_LOWLEVEL_HEADERS}
               ${ABENCH_RENDERER_HIGHLEVEL_SOURCES} ${ABENCH_RENDERER_HIGHLEVEL_HEADERS}
               ${ABENCH_COMMON_LINUX_SOURCES} ${ABENCH_COMMON_LINUX_HEADERS}
               ${ABENCH_RENDERER_LOWLEVEL_LINUX_SOURCES} ${ABENCH_RENDERER_LOWLEVEL_LINUX_HEADERS})

TARGET_LINK_LIBRARIES(ABench glslang SPIRV OGLCompiler OSDependent dl fbxsdk freeimage pthread
                      ${ABENCH_PKG_DEPS_LIBRARIES})

ADD_CUSTOM_COMMAND(TARGET ABench POST_BUILD COMMAND
                   ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ABench> ${ABENCH_OUTPUT_DIRECTORY}/${targetfile})
